crates/baml-rt-builder/tests/snapshots/bootstrap_test__bootstrap_with_tools_artifacts.snap
---
source: crates/baml-rt-builder/tests/bootstrap_test.rs
expression: artifacts
---
=== manifest.json ===
{
  "version": "1.0.0",
  "name": "calculator-agent",
  "entry_point": "src/index.ts",
  "signature": "calculator-agent@1.0.0",
  "tools": [
    "support/calculate"
  ],
  "discovery": {
    "description": "Uses support/calculate"
  }
}

=== baml_src/calculator_agent_prompt.baml ===
// Agent prompt with tool choice
// (generated_tools.baml is loaded from the same directory by the runtime)

function ChooseCalculatoragentTool(user_message: string) -> SupportCalculateSessionPlan {
  client DefaultClient
  prompt #"
    The user said: { user_message }
    Decide whether to use a tool and produce a session plan.

    { ctx.output_format }

    { _.role('user') }
    { user_message }
  "#
}

client DefaultClient {
  provider openai
  options {
    model "gpt-4o-mini"
    api_key env.OPENAI_API_KEY
  }
}


=== src/index.ts ===
/// <reference path="./baml-runtime.d.ts" />
// Types from baml-runtime.d.ts (bootstrap-generated). DSL-only; no protocol plumbing.

async function onChatMessage(message: ChatMessage): Promise<void> {
  const s = session(message);
  await s.run(async () => {
    const text = s.text() || 'unknown';
    const result = await ChooseCalculatoragentTool({ user_message: text });
    return { message: String(result) };
  });
}
__chat_register({ onChatMessage });


=== src/baml-runtime.d.ts ===
/**
 * BAML runtime TypeScript declarations.
 * Auto-generated from BAML runtime IR — do not edit manually.
 * Use these types and function declarations in your agent code (e.g. index.ts).
 */

/** Types for BAML function arguments and return values (classes, enums, aliases). */

export interface SupportCalculateSessionPlan { steps: SupportCalculateOpenStep | SupportCalculateSendStep | SupportCalculateNextStep | SupportCalculateFinishStep | SupportCalculateAbortStep[];
reason: string | null;
 }

/** BAML functions: call these from your agent (e.g. await MyFunction(args)). Declared in global scope so they are visible when this file is used as a module. */

declare global {

declare function ChooseCalculatoragentTool(args: { user_message: string }): Promise<SupportCalculateSessionPlan>;

}

/** Runtime interaction API: A2A task FSM (message-first, typestate rails). */

/**
 * A2A task-only FSM API (message-first).
 *
 * This is the canonical interface for A2A task flows in TypeScript.
 * It intentionally models legal task/session transitions in the type system
 * so invalid transition wiring fails at compile-time.
 */
export type A2aTaskState =
    | "TASK_STATE_SUBMITTED"
    | "TASK_STATE_WORKING"
    | "TASK_STATE_INPUT_REQUIRED"
    | "TASK_STATE_AUTH_REQUIRED"
    | "TASK_STATE_COMPLETED"
    | "TASK_STATE_FAILED"
    | "TASK_STATE_CANCELED"
    | "TASK_STATE_REJECTED";
export type A2aNonTerminalTaskState =
    | "TASK_STATE_SUBMITTED"
    | "TASK_STATE_WORKING"
    | "TASK_STATE_INPUT_REQUIRED"
    | "TASK_STATE_AUTH_REQUIRED";
export type A2aTerminalTaskState =
    | "TASK_STATE_COMPLETED"
    | "TASK_STATE_FAILED"
    | "TASK_STATE_CANCELED"
    | "TASK_STATE_REJECTED";
export type A2aNextStates<S extends A2aTaskState> =
    S extends "TASK_STATE_SUBMITTED"
        ? "TASK_STATE_WORKING" | "TASK_STATE_COMPLETED" | "TASK_STATE_FAILED" | "TASK_STATE_CANCELED" | "TASK_STATE_REJECTED" | "TASK_STATE_INPUT_REQUIRED" | "TASK_STATE_AUTH_REQUIRED"
    : S extends "TASK_STATE_WORKING"
        ? "TASK_STATE_INPUT_REQUIRED" | "TASK_STATE_AUTH_REQUIRED" | "TASK_STATE_COMPLETED" | "TASK_STATE_FAILED" | "TASK_STATE_CANCELED" | "TASK_STATE_REJECTED"
    : S extends "TASK_STATE_INPUT_REQUIRED"
        ? "TASK_STATE_WORKING" | "TASK_STATE_CANCELED" | "TASK_STATE_REJECTED"
    : S extends "TASK_STATE_AUTH_REQUIRED"
        ? "TASK_STATE_WORKING" | "TASK_STATE_CANCELED" | "TASK_STATE_REJECTED"
    : never;
export interface A2aTaskContext<S extends A2aTaskState> {
    taskId: string;
    contextId?: string;
    state: S;
}
export interface A2aTaskView<S extends A2aTaskState = A2aTaskState> extends A2aTaskContext<S> {}
export interface A2aActiveTask<S extends A2aNonTerminalTaskState> extends A2aTaskView<S> {
    onStatus<N extends A2aNextStates<S>>(expected: N, handler: (task: A2aActiveTask<N>) => Promise<void> | void): A2aActiveTask<S>;
    cancel(): Promise<A2aTerminalTask<"TASK_STATE_CANCELED">>;
}
export interface A2aTerminalTask<S extends A2aTerminalTaskState> extends A2aTaskView<S> {}
export interface A2aStateDispatcher<S extends A2aNonTerminalTaskState> {
    on<N extends A2aNextStates<S>>(state: N, handler: (ctx: A2aTaskContext<N>) => Promise<void> | void): A2aStateDispatcher<S>;
}
export type A2aMessageEvent<S extends A2aTaskState = A2aTaskState> =
    | { kind: "assistantMessage"; text: string; task: A2aTaskView<S> }
    | { kind: "statusChanged"; from?: A2aTaskState; to: S; task: A2aTaskView<S> }
    | { kind: "artifactPublished"; task: A2aTaskView<S>; artifact: unknown; append?: boolean; lastChunk?: boolean }
    | { kind: "completed"; task: A2aTerminalTask<Extract<S, A2aTerminalTaskState>> }
    | { kind: "failed"; task: A2aTerminalTask<Extract<S, A2aTerminalTaskState>>; error: ToolFailure };
/**
 * Session typestate rails:
 * - AwaitingInput: only send/abort are legal
 * - Streaming: event consumption + finish/abort
 * - Closed: terminal state, no further operations
 */
export interface A2aSessionAwaitingInput<I> {
    sessionId: string;
    send(input: I): Promise<A2aSessionStreaming<"TASK_STATE_SUBMITTED">>;
    abort(reason?: string): Promise<A2aSessionClosed>;
}
export interface A2aSessionStreaming<S extends A2aTaskState> {
    sessionId: string;
    events(): AsyncIterable<A2aMessageEvent<S | A2aNextStates<S>>>;
    dispatch(task: A2aActiveTask<Extract<S, A2aNonTerminalTaskState>>): A2aStateDispatcher<Extract<S, A2aNonTerminalTaskState>>;
    finish(): Promise<A2aSessionClosed>;
    abort(reason?: string): Promise<A2aSessionClosed>;
}
export interface A2aSessionClosed {
    sessionId: string;
    closed: true;
}
declare function openA2aTaskSession<I = unknown>(token: string): Promise<A2aSessionAwaitingInput<I>>;
/**
 * Bootstrap-generated: handler types. Incoming message (parts only; IDs/context are host-managed).
 * Session lifecycle: host invokes onChatMessage(message); agent uses session(message).run(...) to run work and emit outcomes.
 */
export interface Part { text?: string; data?: unknown; [key: string]: unknown; }
export interface Message {
  parts: Part[];
  /** First text part. Present on messages from awaitInput(); for the initial message use session(message).text(). */
  text?(): string;
}
export type ChatMessage = Message;
/**
 * Result shape for session.run() callback. Return { message } on success (runtime emits message and completed);
 * return { error } on failure (runtime emits failed with that error). No need to call emit helpers yourself.
 */
export type SessionResult = { message: string } | { error: string };
/**
 * Emitter passed into run(emit => ...) for intermediate emissions (working message, artifact, status).
 * Use when you need to stream artifacts or status before returning the final SessionResult.
 */
export interface SessionEmitter {
  /** Emit a working message (task state remains WORKING). */
  message(text: string): void;
  /** Emit an artifact chunk (append/lastChunk optional). */
  artifact(artifact: unknown, append?: boolean, lastChunk?: boolean): void;
  /** Emit a status transition (e.g. TASK_STATE_WORKING). */
  statusChanged(to: A2aTaskState): void;
  /**
   * Suspend this flow until the next message for the same task/context arrives.
   * Runtime emits TASK_STATE_INPUT_REQUIRED before suspension. Optional prompt is attached to that status.
   */
  awaitInput(prompt?: string): Promise<ChatMessage>;
}
/**
 * Fluent session builder. Entrypoint for agent logic: session(message).run(async () => ...).
 * - .text() returns the first text part of the message (no manual extraction).
 * - .run(fn) runs fn(); if it returns { message }, runtime emits that and completed; if { error }, runtime emits failed.
 * - .run(emit => fn(emit)) receives an emitter for intermediate message/artifact/status and await-input suspension.
 * - .onCompleted / .onFailed are optional side-effect callbacks; emission is always done by the runtime.
 */
export interface SessionBuilder {
  /** First text part of the message; use for BAML/tool args. Defaults to "" if missing. */
  text(): string;
  /** Optional: called with the success message before the runtime emits completed. */
  onCompleted(fn: (message: string) => void): SessionBuilder;
  /** Optional: called with the error string before the runtime emits failed. */
  onFailed(fn: (error: string) => void): SessionBuilder;
  /**
   * Run async work. Return { message } to succeed (runtime emits message + completed);
   * return { error } to fail (runtime emits failed). Rejected promise is treated as { error: err.message }.
   * Overload: run(emit => ...) receives SessionEmitter for intermediate emissions.
   */
  run(fn: (emit: SessionEmitter) => Promise<SessionResult>): Promise<void>;
  run(fn: () => Promise<SessionResult>): Promise<void>;
}
/**
 * Context passed to the run entrypoint when using __chat_register({ run }).
 * The real entrypoint is run(ctx): you receive text, message, and emit; return SessionResult.
 */
export interface RunContext {
  /** First text part of the message (same as session(message).text()). */
  text: string;
  /** Inbound message (parts, optional .text() from awaitInput). */
  message: ChatMessage;
  /** Emitter for working message, artifact, awaitInput; use when you need to stream or suspend. */
  emit: SessionEmitter;
}
/** Agent contract: register this; host invokes onChatMessage per message. */
export interface BamlAgent {
  /** Optional: run(ctx) is the entrypoint; runtime wraps it into onChatMessage. Prefer this over onChatMessage. */
  run?(ctx: RunContext): Promise<SessionResult>;
  /** Optional: raw handler when run is not used. */
  onChatMessage?(message: ChatMessage): Promise<void>;
  tools?: Record<string, (args: unknown) => Promise<unknown>>;
}
declare global {
  /**
   * Global alias for incoming chat messages in agent entrypoints.
   * This keeps bootstrap/index.ts ergonomic without local type shims.
   */
  type ChatMessage = Message;
  /**
   * First text part of a message. Use for any ChatMessage (e.g. from awaitInput).
   * For the initial message you can also use session(message).text().
   */
  function messageText(message: ChatMessage | null | undefined): string;
  /**
   * Start a session for this message. Use the returned builder to get .text(), then .run(async () => ...).
   * Legal transitions and emission are handled by the runtime; you only return success or error from run().
   */
  function session(message: ChatMessage | null | undefined): SessionBuilder;
  function __chat_register(agent: BamlAgent): void;
  function __chat_yield(chunk: unknown): void;
}
export type ToolFailureKind =
    | "InvalidInput"
    | "ExecutionFailed"
    | "NotAuthorized"
    | "RateLimited"
    | "Cancelled"
    | "Unknown";
export interface ToolFailure {
    kind: ToolFailureKind;
    message: string;
    retryable: boolean;
}


=== tsconfig.json ===
{
  "compilerOptions": { "strict": true, "skipLibCheck": true },
  "include": ["src/**/*"]
}


=== baml_src/generated_tools.baml ===
// Auto-generated tool interfaces
// This file is auto-generated - do not edit manually

// FSM (Finite State Machine) Tool Session Protocol:
// All host tools use a session-based FSM with strict state transitions:
// 1. Open: Must be the FIRST step - opens a tool session
// 2. Send: Can only occur AFTER Open - sends input to the session
// 3. Next: Retrieves output from the session (after Send)
// 4. Finish: Closes the session gracefully
// 5. Abort: Closes the session with an error
//
// CRITICAL FSM RULES:
// - Open MUST come before any Send step
// - Open may include 'initial_input' only when the step schema defines that field
// - Send uses 'input' field (for subsequent inputs)
// - After Send, call Next to retrieve results
// - Always Finish or Abort to close the session

enum ToolSessionOp {
  Open @description("Open a new tool session. MUST be the first step in any plan. Include 'initial_input' only when the step schema defines that field.")
  Send @description("Send input to an already-open session. Can ONLY be used after an Open step. Use 'input' field (NOT 'initial_input').")
  Next @description("Retrieve the next output from the session. Call this after Send to get results. For streaming tools, call Next multiple times until Done.")
  Finish @description("Close the session gracefully after completing all operations. Always call Finish when done with a tool session.")
  Abort @description("Close the session with an error. Use this if something went wrong and you need to terminate the session.")
}

// Domain types generated from #[derive(BamlType)]
class Expression {
  left int
  operation MathOperation
  right int
}

enum MathOperation {
  Add @alias("+")
  Subtract @alias("-")
  Multiply @alias("*")
  Divide @alias("/")
}

class CalculatorInput {
  expression Expression
}

class CalculatorOutput {
  expression string
  result float
  formatted string
}

class SupportCalculateOpenStep {
  op "Open"
  reason string? @description("Optional explanation for this step.")
}

class SupportCalculateSendStep {
  op "Send"
  input CalculatorInput @description("Input to send to the already-open session.")
  reason string? @description("Optional explanation for this step.")
}

class SupportCalculateNextStep {
  op "Next"
  reason string? @description("Optional explanation for this step.")
}

class SupportCalculateFinishStep {
  op "Finish"
  reason string? @description("Optional explanation for this step.")
}

class SupportCalculateAbortStep {
  op "Abort"
  reason string? @description("Optional explanation for aborting the session.")
}

type SupportCalculateSessionStep = SupportCalculateOpenStep | SupportCalculateSendStep | SupportCalculateNextStep | SupportCalculateFinishStep | SupportCalculateAbortStep

class SupportCalculateSessionPlan {
  steps SupportCalculateSessionStep[] @description("Array of FSM steps. MUST follow this strict order: 1) Open (include initial_input only when the schema defines it), 2) Send (with input), 3) Next (to retrieve results), 4) Finish or Abort (to close). Runtime resolves this plan to a tool via builder-generated function->plan mapping (session_plan_functions.json). Example: [{op: \"Open\"}, {op: \"Send\", input: {...}}, {op: \"Next\"}, {op: \"Finish\"}].")
  reason string? @description("Optional plan-level intent or rationale. Logged when plan is rejected (e.g. empty steps).")
}
